# easy-cold-storage-uploader

./: .gitignore  .pylintrc  cmd_parser.py  download_executer.py  main.py  mypy.ini  profileSetup.py  profile_setup.py  pyproject.toml  readme.md  requirements.txt  setupGlacier.py  uploadExecuter.py  uploadGlacier.py  upload_executer.py
.github/: restyled.yml
.github/workflows/: lint_test.yml  pylint.yml  release.yml
datatypes/: transfer_services.py
dependencyInjection/: mainFactory.py  main_factory.py  service.py
dependency_injection/: main_factory.py  service.py
enums/: file_ending.py  transfer_service_ids.py
executer/: download_executer.py  setup_executer.py  upload_executer.py
services/: cancel_service.py  db_service.py  service_base.py  setting_service.py
services/compression/: compressionBase.py  compressionServiceBzip2.py  compressionServiceGzip.py  compressionServiceLzma.py  compressionServiceNone.py  compression_base.py  compression_service_bzip2.py  compression_service_lzma.py  compression_service_none.py
services/encryption/: encryptionBase.py  encryptionServiceAes.py  encryptionServiceNone.py  encryptionServiceRsa.py  encryption_base.py  encryption_service_aes.py  encryption_service_none.py  encryption_service_rsa.py
services/filetype/: filetypeBase.py  filetypeServiceNone.py  filetypeServiceTar.py  filetypeServiceZip.py  filetype_base.py  filetype_service_none.py  (+2 more)
utils/: awsUtils.py  aws_utils.py  consoleUtils.py  console_utils.py  data_utils.py  hashUtils.py  hash_utils.py  report_utils.py  storageUtils.py  storage_utils.py
(+10 files in other folders)
