[tool.poetry]
package-mode = false
name = "easy_cold_storage_uploader"

[tool.poetry.dev-dependencies]
pytest = "^8"
pylint = "^3.1"
mypy = "^1.9"

[tool.poetry.dependencies]
python = "3.12.2"

pyinstaller = "6.6.0"
rich = "13.7.1"
boto3 = "1.34.93"
boto3-stubs = "1.34.89"
pycryptodome = "3.20.0"
stream-zip = "0.0.71"
stream-unzip = "0.0.91"
tinydb = "4.8.0"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
